--- a/packages/shop-mobile-expo/src/store/features/translation/lang/ru-RU.json
+++ b/packages/shop-mobile-expo/src/store/features/translation/lang/ru-RU.json
@@ -214,6 +214,13 @@
 		"NAME": "Имя продавца",
 		"WITH_NAME": "Торговцы с именем"
 	},
+	"SEARCH_VIEW": {
+		"VIEW_MORE": "Посмотреть больше",
+		"EMPTY_LIST": "Товары или продавцы не найдены...",
+		"SEARCH_PLACEHOLDER": "Название продукта или ресторана",
+		"OPEN": "Открытым",
+		"CLOSED": "Закрыто"
+	},
 	"NO_SERVER_VIEW": {
 		"NO_SERVER": "Сервер упал"
 	},
